# spark-declarative-pipelines

./: CLAUDE.md  README.md
src/py/generators/: general_order_generator.py
src/py/sdp/: README.md  __init__.py  main.py  pyproject.toml
src/py/sdp/brickfood/: README.md
src/py/sdp/daily_orders/: README.md  __init__.py  pipeline.yml  run_pipeline.sh
src/py/sdp/daily_orders/scripts/: calculate_sales_tax.py  generate_csv_data.py  query_tables.py  state_analytics.py
src/py/sdp/daily_orders/tests/: test_materialized_views.py
src/py/sdp/daily_orders/transformations/: cancelled_orders_mv.sql  orders_mv.py
src/py/sdp/oil_rigs/: README.md
src/py/sdp/utils/: order_gen_util.py
